--- a/app/views/entries/entrytrends.js.erb
+++ b/app/views/entries/entrytrends.js.erb
@@ -4,6 +4,8 @@ $("#entrytable_sum").addClass('hidden');
 $("#entrycalendar").addClass('hidden');
 $("#entrycalendar_sum").addClass('hidden');
 
+$('#projectstaff').addClass('hidden');
+
 $('#entrytrends').html("<%= escape_javascript( render('entries/entries_trends') )%>");
 
 $('#entrytrends').removeClass('hidden');
