--- a/app/views/entries/entrycalendar.js.erb
+++ b/app/views/entries/entrycalendar.js.erb
@@ -1,6 +1,8 @@
 $("#entrytable").addClass('hidden');
 $("#entrytable_sum").addClass('hidden');
 $('#entrytrends').addClass('hidden');
+$('#projectstaff').addClass('hidden');
+
 
 $("#entrycalendar").html("<%= escape_javascript( render('entries/entries_calendar') )%>");
 $("#entrycalendar_sum").html("<p class='totalrow'><%= escape_javascript( @cal_month_sum.to_s) %> hours</p>");
