--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,7 @@
 
     <div class="span2 projectlist">
       <div class="row"><!-- List Projects -->
-			  <p class="titleitem span2">Project's Employees</p>
+			  <div class="span2"><h4>Project Employees</h4></div>
 	      <%= render 'users/filterlist' %>
       </div>    
     <div class="row"><div class="spanonefive" style="text-align: center"><%= submit_tag "Filter Data", :name => nil , :class => "btn spanonefive"%></div></div>  
@@ -41,7 +41,7 @@
           <% end %>
           <br />
   			  <%= link_to projectstaff_path(:sort => "cal_date", :direction => "desc", :myfrom => @myfrom, :myto => @myto, 
-					    :filter_projects => @filter_projects, :filter_employees => @filter_employees), 
+					    :filter_projects => @filter_projects, :filter_employees => @filter_employees, :project_id => @project), 
   					  :remote => true, :id => "ProjectStaff_btn", :class => "buttonleft btn btn-info" do %>
               <i class="icon-user icon-white"></i> Staff
           <% end %>
@@ -71,6 +71,9 @@
       		</div>
       		<div id="entrytrends" class="hidden">
       			<%= render :partial => "entries/entries_trends" %>
+      		</div>
+      		<div id="projectstaff" class="hidden">
+      			<%= render :partial => "projects/project_staff" %>
       		</div>
       	</div><!-- selectdetails -->	    
   	  </div> <!-- View Details -->
@@ -106,6 +109,11 @@
 
 
 
+      <!-- <h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
+      <% @prev_month_entries.each do |e| %>
+        <p><%= e.user.name %> - <%= e.hours_sum %></p>
+      <% end %> -->
+
 	</div> <!-- Filter Data, Details --> 
 
 </div><!--/.container-fluid, row-->
@@ -113,46 +121,5 @@
 
 
     
-	<div class="span8">
 
-		<!-- LIST STAFFED EMPLOYEES -->
-		<h2 id="ProjectStaffCount">Staff - <%= @staff.count %> </h2>
-		<table class="table table-bordered table-condensed">
-		  <thead>
-		    <tr>	
-		      <th><p>Employee</p></th>
-			    <th><p>Rate</p></th>
-		      	<!-- <th><p>Start Date</p></th>
-		      	<th><p>End Date</p></th> -->
-			    <th><p>Budgeted Hours</p></th>
-			    <th><p>Actual Hours</p></th>
-			    <th></th>
-		    </tr>
-		  </thead>
-		  <tbody>
-			<% @staff.each do |s| %>
-		    <tr>
-									
-		      	<td> <%= s.user.name %></td>
-		      	<td> <%= best_in_place s, :rate %></td>
-			    <!-- <td> <%= best_in_place s, :staffing_start, :type => :date %></td>
-			    <td> <%= best_in_place s, :staffing_end, :type => :date %></td> -->
-				<td> <%= best_in_place s, :budgeted_hrs %></td>
-				<td> <%= (hr_sum = @user_entries.find{|e| e.user_id == s.user_id}) ? hr_sum.hours_sum : 0 %></td>
-				<td>
-					<%= link_to(s, confirm: 'Are you sure?', method: :delete, 
-							    :class => "tips", :title => "Remove") do %><i class="icon-remove"></i><% end %></td>
-
-		    </tr>
-
-			<% end %>
-		  </tbody>
-		</table>
 	
-    <!-- <h1>Last Month Invoice Amount = <%= @prev_month_sum %></h1>
-    <% @prev_month_entries.each do |e| %>
-      <p><%= e.user.name %> - <%= e.hours_sum %></p>
-    <% end %> -->
-	</div>
-	
-</div></div><!--/.container-fluid, row-->
