--- a/app/views/projects/new.js.erb
+++ b/app/views/projects/new.js.erb
@@ -1,1 +1,1 @@
-$('#popup_dialog_box').html("<%= escape_javascript(render 'projects/form') %>");
+$('#popup_dialog_box_project').html("<%= escape_javascript(render 'projects/form') %>");
