--- a/app/views/relationships/new.js.erb
+++ b/app/views/relationships/new.js.erb
@@ -1,1 +1,1 @@
-$('#popup_dialog_box').html("<%= escape_javascript(render 'relationships/form') %>");
+$('#popup_dialog_box_staffing').html("<%= escape_javascript(render 'relationships/form') %>");
