--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,1 +1,1 @@
-$('#popup_dialog_box').html("<%= escape_javascript(render 'users/form') %>");
+$('#popup_dialog_box_employee').html("<%= escape_javascript(render 'users/form') %>");
