fixed dialog bug

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -13,7 +13,7 @@
           </div>
       <% end %>
       
-			<%= link_to "+ new project", new_project_path, :remote => true, :class => "popup_dialog btn" %>      
+			<%= link_to "+ new project", new_project_path, :remote => true, :class => "popup_dialog_project btn" %>      
     </div>
 
 
@@ -25,7 +25,7 @@
           </div>
       <% end %>
       
-      <%= link_to "+ new employee", new_user_path, :remote => true, :class => "popup_dialog btn" %>      
+      <%= link_to "+ new employee", new_user_path, :remote => true, :class => "popup_dialog_employee btn" %>      
     </div>  
     
   </div>
