--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,7 +18,7 @@
     </div> <!-- Project List -->
 
 
-    <div class="span9 datatable">
+    <div class="span10 datatable clearleftmargin">
 
       <div class="viewselect">
         <div data-toggle="buttons-radio">
