--- a/app/assets/stylesheets/stylesheet1.css
+++ b/app/assets/stylesheets/stylesheet1.css
@@ -212,9 +212,8 @@ th.edit {
 }
 
 .utilization {
-/*	-moz-box-shadow: inset 0 0 5px 5px #888;
-	-webkit-box-shadow: inset 0 0 5px 5px#888;
-	box-shadow: inset 0 0 5px 5px #888;*/
+	margin-top: 30px;
+	z-index: 1;
 }
 
 .formfilter {
