--- a/app/views/entries/_entries_trends.html.erb
+++ b/app/views/entries/_entries_trends.html.erb
@@ -25,7 +25,7 @@
   </div>
 
 
-	<div id="hours_by_project_chart"></div>
+	<div id="hours_by_project_chart" class="span 7"></div>
 	<script type="text/javascript">
 
 		// Create the data table.
@@ -83,39 +83,3 @@
 	
 
 <% end %>
-
-<!-- <table class="table table-bordered table-condensed">
-  <thead>
-    <tr>	
-      <th><p>Project</p></th>
-      <th><p>Hours</p></th>
-    </tr>
-  </thead>
-  <tbody>
-	<% @project_sum_array.each do |p| %>
-    <tr>
-      	<td> <%= p[0] %> </td>
-      	<td> <%= p[1] %> </td>
-    </tr>
-
-	<% end %>
-  </tbody>
-</table>
-
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>	
-      <th><p>Employee</p></th>
-      <th><p>Hours</p></th>
-    </tr>
-  </thead>
-  <tbody>
-	<% @employee_sum_array.each do |e| %>
-    <tr>
-      	<td> <%= e[0] %> </td>
-      	<td> <%= e[1] %> </td>
-    </tr>
-
-	<% end %>
-  </tbody>
-</table> -->
