project details and summary

--- a/app/views/entries/entrytable.js.erb
+++ b/app/views/entries/entrytable.js.erb
@@ -32,7 +32,8 @@ $('.bip-hours-wrapper .best_in_place').bind("ajax:success", function(xhr, data){
 	
 	
 	$("div#entrytable_sum").html('<p class="totalrow">' + hours_sum + ' hours</p>');
+	$('#table_row_hours_sum').html(hours_sum);
 	
-	$("#filter_employees_"+user_id+"_text").html(user_name+' ('+user_sum+')');
-	$("#filter_projects_"+project_id+"_text").html(project_name+' ('+project_sum+')');
+	$("#filter_employees_"+user_id+"_text").attr('data-original-title', user_sum + ' total hours');
+	$("#filter_projects_"+project_id+"_text").attr('data-original-title', project_sum + ' total hours');
 });
