--- a/app/views/projects/_project_staff.html.erb
+++ b/app/views/projects/_project_staff.html.erb
@@ -1,7 +1,8 @@
 <div>
-
+	<div id="projectstaff_sum" style="margin-bottom: 20px">
+        <p class="totalrow"><%= @project_hours_sum.to_s %> total hours</p>
+      </div>
 	<!-- LIST STAFFED EMPLOYEES -->
-	<h2 id="ProjectStaffCount">Staff - <%= @staff.count %> </h2>
 	<table class="table table-bordered table-condensed">
 	  <thead>
 	    <tr>	
