--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Update a Project</h1>
+<div class="container mainpage">  
+	
+	<h1>Update a Project</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
+
+</div>
