--- a/app/views/projects/projectstaff.js.erb
+++ b/app/views/projects/projectstaff.js.erb
@@ -7,4 +7,6 @@ $("#entrycalendar_sum").addClass('hidden');
 $('#entrytrends').addClass('hidden');
 
 $('#projectstaff').html("<%= escape_javascript( render('projects/project_staff') )%>");
+
+$("#projectstaff_sum").removeClass('hidden');
 $('#projectstaff').removeClass('hidden');
