--- a/app/views/entries/_entries_table.html.erb
+++ b/app/views/entries/_entries_table.html.erb
@@ -48,7 +48,7 @@
 	<!-- TOTAL HOURS ROW -->
 	<tr>	
       	<th colspan="3" style="text-align: left"><p>Total Hours</p></th>
-	      <th colspan="2" style="text-align: left"><p><%= @hrs_sum %></p></th>
+	      <th colspan="2" style="text-align: left"><p id="table_row_hours_sum"><%= @hrs_sum %></p></th>
     </tr>
   </tbody>
 </table>
