--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 	</div>
 
 
-	<%= render 'shared/flash', :flash => flash %>
+	<!-- <%= render 'shared/flash', :flash => flash %> -->
 
 
 <%= yield %>
