--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,18 @@
     
     <div class="span2 projectlist">
       <div class="row" id="listFilterProjects"><!-- List Projects -->
-			  <div class="span2"><h4>My Projects</h4></div>
-	      <%= render 'projects/filterlist' %>
+			<div class="span2">
+            	<p>From: <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), 
+							:class => "spanonefive", :id => "startdate") %> </p>
+				
+  			    <p>To: <br /><%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), 
+							:class => "spanonefive", :id => "enddate") %> </p>
+        	</div>
+
+			<div class="span2">
+				<h4>My Projects</h4>
+			</div>
+	      	<%= render 'projects/filterlist' %>
       </div>    
     <div class="row"><div class="span2"><%= submit_tag "Filter Data", :name => nil , :class => "btn span2 "%></div></div>  
     </div> <!-- Project List -->
@@ -46,14 +56,9 @@
   	  <div class="viewdetailsuser"> <!-- View Details -->
         <div class="selectdetails">
       	  
-      	  <div class="span4">
-            From: <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), :class => "spanonefive", :id => "startdate") %>
-  			    To: <%= text_field(:to, '', :value => @myto.strftime('%h %-d %Y'), :class => "spanonefive", :id => "enddate") %>
-        	</div></div> <!-- filterform -->
-        	<div class="span2"><%= submit_tag "Filter Data", :name => nil , :class => "btn spanonefive "%></div>
-      	  <div id="entrytable_sum" style="margin-bottom: 20px">
-            <p class="totalrow"><%= @hrs_sum %> hours</p>
-          </div>
+       	  	<div id="entrytable_sum" style="margin-bottom: 20px">
+            	<p class="totalrow"><%= @hrs_sum %> hours</p>
+          	</div>
           
           <div id="entrytable">
       		  <%= render :partial => "entries/entries_table" %>
