--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,21 @@
 <%= simple_form_for @user do |f| %>
 
 	<%= f.error_notification %>
-	<%= f.input :name %>
-    <%= f.input :email %>
+	
+	<%= f.input :name, :required => true %>
+  
+  <%= f.input :email %>
+	
 	<% if @type == "edit" %>
-		<%= f.input :start_date, :as => :string,
-		 			:input_html => { :id => "UserStartDate", :value => @startdate } %>
+		<%= f.input :start_date, :as => :string, :input_html => { :id => "UserStartDate", :value => @startdate } %>
+	
 	<% end %>
     <%= f.input :password %>
     <%= f.input :password_confirmation %>
   	<%= f.hidden_field :company_id, :value => @company.id %>
+	
 	<%= f.error :base %>
+	
 	<%= f.button :submit %>
 
 <% end %>
