--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,10 +51,12 @@
 
 	<!-- <%= render 'shared/flash', :flash => flash %> -->
 
+	<div class="container mainpage">  
 
-<%= yield %>
+		<%= render 'shared/flash', :flash => flash %>
+		<%= yield %>
 
-
+	</div>
 
 <footer>
   <br />
