--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,37 @@
     <%= form_tag root_url, :method => 'get' do %> <!-- Creates the form filter -->        
     
     
-    <div class="span2 projectlist">
+    <div class="span3 projectlist">
+      
+        <div class="span3 projectlist">
+          <div class="row well"> <!-- Feedback -->
+
+        		<h4 class="smallbottommargin"><%= @user.name %>'s Utilization</h4>
+            <div class="row statusbar">
+              <div class="spanhalf"><p>Week</p></div>
+              <div class="span2 progress progress-striped progress-warning tips" 
+                    title="<%= @my_week_sum %>/<%= @workhours_week %>"><div class="bar" 
+                    style="width: <%= @utilization_week %>;"><p><%= @utilization_week %></p></div></div>
+            </div>
+            <div class="row statusbar">
+              <div class="spanhalf"><p>Month</p></div>
+              <div class="span2 progress progress-striped progress-warning tips" 
+                    title="<%= @my_month_sum %>/<%= @workhours_month %>"><div class="bar" 
+                    style="width: <%= @utilization_month %>;"><p><%= @utilization_month %></p></div></div>
+            </div>
+            <div class="row statusbar">
+              <div class="spanhalf"><p>Year</p></div>
+              <div class="span2 progress progress-striped progress-warning tips" 
+                    title="<%= @my_year_sum %>/<%= @workhours_year %>"><div class="bar" 
+                    style="width: <%= @utilization_year %>;"><p><%= @utilization_year %></p></div></div>
+            </div>
+    
+    
+
+          </div> <!-- Feedback -->
+        </div>
+      
+      
       <div class="row" id="listFilterProjects"><!-- List Projects -->
 			<div class="span2">
             	<p>From: <%= text_field(:from, '', :value => @myfrom.strftime('%h %-d %Y'), 
@@ -27,7 +57,7 @@
     </div> <!-- Project List -->
 
 
-    <div class="span10 datatable clearleftmargin">
+    <div class="span9 datatable clearleftmargin">
 
       <div class="viewselect">
         <div data-toggle="buttons-radio">
